# hermes_rs

./: Cargo.toml  LICENSE  justfile  rustfmt.toml
crates/hermes-error/: Cargo.toml
crates/hermes-error/src/: lib.rs
crates/hermes-state/: Cargo.toml
crates/hermes-state/migrations/: 001_init.sql
crates/hermes-state/src/: error.rs  lib.rs  sqlite.rs  store.rs
crates/hermes-types/: Cargo.toml
crates/hermes-types/src/: lib.rs  message.rs  session.rs  tool.rs
docs/: plan.md
docs/step-by-step/: phase-0-scaffold.md  phase-1-types.md  phase-2-state.md
