[package]
name         = "hermes-types"
description  = "Core data types for hermes_rs"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
